syntax = "proto3";

option go_package = "github.com/cc-0000/indeq/common/api";

import "api/kafka.proto";

package api;

service VectorService {
    rpc DeleteFile(VectorFileDeleteRequest) returns (VectorFileDeleteReponse);
    rpc GetTopKChunks(GetTopKChunksRequest) returns (GetTopKChunksResponse);
    rpc SetupCollection(SetupCollectionRequest) returns (SetupCollectionResponse);
}

message VectorFileDeleteRequest {
    string user_id = 1;
    Platform platform = 2;
    string file_id = 3;   // file paths should be unique per platform
}

message VectorFileDeleteReponse {
    bool success = 1;
    string error = 2;
}

message GetTopKChunksRequest {
    string user_id = 1;
    string prompt = 2;
}

message GetTopKChunksResponse {
    repeated TextChunkMessage top_k_vectors = 1;
    string error = 2;
}

message SetupCollectionRequest {
    string user_id = 1;
}

message SetupCollectionResponse {
    bool success = 1;
    string error = 2;
}